Fix overlapping text

--- a/src/components/UI/Text/Text.module.scss
+++ b/src/components/UI/Text/Text.module.scss
@@ -58,6 +58,7 @@
 .pre {
   font-size: var(--default-font-size);
   font-family: inherit;
+  white-space: pre-wrap;
 }
 
 .link {
